Add HTML structure and styling for landing page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,154 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Atta Pathan - Official Panel</title>
+    <style>
+        body { font-family: 'Segoe UI', Arial, sans-serif; background-color: #f0f2f5; margin: 0; padding: 10px; text-align: center; }
+        .channel-btn { background: #25D366; color: white; padding: 15px; border-radius: 12px; margin-bottom: 20px; font-weight: bold; display: block; text-decoration: none; font-size: 18px; box-shadow: 0 4px 10px rgba(37,211,102,0.3); animation: pulse 2s infinite; border: 2px solid #fff; }
+        .grid-container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; max-width: 500px; margin: auto; }
+        .box { background: white; padding: 18px 8px; border-radius: 15px; box-shadow: 0 3px 6px rgba(0,0,0,0.05); text-decoration: none; color: #333; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative; border: 1px solid #e0e0e0; min-height: 100px; cursor: pointer; transition: 0.3s; }
+        .box i { font-size: 28px; margin-bottom: 8px; }
+        .box span { font-size: 10px; font-weight: 800; color: #222; text-transform: uppercase; line-height: 1.2; }
+        .badge { position: absolute; top: 8px; right: 8px; background: #FFD700; color: #000; font-size: 8px; padding: 2px 6px; border-radius: 5px; font-weight: bold; }
+        .section-tag { grid-column: span 2; text-align: left; font-size: 13px; font-weight: bold; color: #555; margin: 15px 0 5px 5px; border-left: 4px solid #25D366; padding-left: 10px; }
+        #share-popup { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 85%; max-width: 400px; background: white; padding: 25px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.3); z-index: 2000; }
+        #overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); z-index: 1000; }
+        .share-confirm-btn { background: #25D366; color: white; padding: 12px 25px; border-radius: 25px; border: none; font-weight: bold; margin-top: 15px; cursor: pointer; width: 100%; }
+        .vpn-box { grid-column: span 2; background: #1a1a1a; color: #00ff00; padding: 12px; border-radius: 10px; font-family: monospace; font-size: 10px; text-align: left; overflow-x: auto; margin: 10px 0; white-space: pre; border: 1px solid #333; }
+        @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.02); } 100% { transform: scale(1); } }
+        footer { margin-top: 30px; font-size: 11px; color: #888; padding-bottom: 30px; }
+    </style>
+</head>
+<body>
 
+<div id="overlay"></div>
+<div id="share-popup">
+    <h3 style="color: #25D366; margin-top: 0;">🔒 Link Locked!</h3>
+    <p style="font-size: 14px; color: #444;">Unlock karne ke liye isay <b>2 Groups</b> mein share karein.</p>
+    <p id="share-count-text" style="font-weight: bold; color: #e67e22;">Remaining Shares: 2</p>
+    <button class="share-confirm-btn" onclick="processShare()">📤 SHARE NOW</button>
+</div>
+
+<a href="https://whatsapp.com/channel/0029VbBbJoMD38CXtkQTqB0c" target="_blank" class="channel-btn">🚀 JOIN MY WHATSAPP CHANNEL</a>
+
+<div class="grid-container">
+
+    <div class="section-tag">⭐ MASTER COURSES</div>
+    <div class="box" onclick="unlockLink('https://drive.google.com/drive/folders/1K83JXcFtTJ2S505rl3SOMg0x_3TsGEOx')">
+        <div class="badge">A-Z</div><i>💳</i><span>CARDING FULL COURSE</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://drive.google.com/drive/folders/1x7UsTHYK5t9tsHA1JevGVX1f0g11tuZK')">
+        <div class="badge">1000+</div><i>🎓</i><span>PREMIUM BUNDLE</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://drive.google.com/drive/folders/1MhVW5eE7YOue54VBDs62Q1d5pow7vhyW')">
+        <i>📢</i><span>FB ADS COURSE</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://drive.google.com/drive/folders/11M6sg4DCmk5V-YZDafFZnWDUHE7NCEWV')">
+        <i>💻</i><span>C++ URDU COURSE</span>
+    </div>
+
+    <div class="section-tag">💬 WHATSAPP TRICKS</div>
+    <div class="box" onclick="unlockLink('https://www.mediafire.com/file/kqvh7sm4sd38ida/WHATSAPP_UNBAN-METHOD_2026_BY_ARYAN_MODZ.zip/file')">
+        <i>🚫</i><span>WA PERMANENT UNBAN</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://www.mediafire.com/folder/odojhkqdgvpzr/Otp+unlock+🔓')">
+        <i>🔓</i><span>WA OTP UNLOCK</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://drive.google.com/drive/folders/1SUnOoRrxONfY1alOPzZrmoXWGjXeDbOG')">
+        <i>📞</i><span>FAKE NUMBER (ALL)</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://www.mediafire.com/folder/gnz31wwmlmufj/HOW+TO+SAVE+STATUS+WITH+OUT+ANY+APK')">
+        <i>📲</i><span>STATUS SAVER</span>
+    </div>
+
+    <div class="section-tag">📈 SOCIAL GROWTH</div>
+    <div class="box" onclick="unlockLink('https://drive.google.com/drive/folders/10nygcThLWchc9Omdq0FPHEgSxWtqg1nY')">
+        <i>📸</i><span>INSTA 1K VIEWS</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://www.mediafire.com/file/85cm895ox1tovxh/FACEBOOK_BLUE_TICK_FREE_METHOD-BY-TEAM-WORLD-KING.zip/file')">
+        <i>✔️</i><span>FB BLUE TICK</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://drive.google.com/drive/folders/1ieDdc-_95kor2N_zTTJpOc9yGAj_IXYl')">
+        <i>🎵</i><span>TIKTOK VIRAL</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://zefoy.com/')">
+        <i>🚀</i><span>TIKTOK LIKES</span>
+    </div>
+
+    <div class="section-tag">🎮 GTA MOBILE PACK</div>
+    <div class="box" onclick="unlockLink('https://dl.apkvision.org/Grand-Theft-Auto-V-0.3-Test.apk')">
+        <i>🔥</i><span>GTA 5 MOBILE</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://dl.apkvision.org/gta-san-andreas-definitive/GTA-SA-Definitive-v1.87.0-full-apkvision.apks')">
+        <i>🔫</i><span>GTA SAN ANDREAS</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://dl.apkvision.org/gta-vice-city-definitive/GTA-Vice-City-Definitive-v1.90.0-full-apkvision.apk')">
+        <i>🌴</i><span>GTA VICE CITY</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://dl.apkvision.org/gta-chinatown-wars/GTA-CTW-v4.4.221-full-apkvision.apk')">
+        <i>🏮</i><span>GTA CHINA TOWN</span>
+    </div>
+
+    <div class="section-tag">⚙️ TOOLS & AI</div>
+    <div class="box" onclick="unlockLink('https://gamitisa.com/tools')">
+        <i>📶</i><span>WIFI PASSWORD</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://www.mediafire.com/file/j86fkfhpvvat1r9/Convert_Boys_Voice_into_Girl_Method_By_HAMID_SHAH.mp4/file')">
+        <i>🎙️</i><span>BOY TO GIRL VOICE</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://drive.google.com/drive/folders/1_B_I13M3QDMAB6nI-wbsVY-esCwnmNWW')">
+        <i>🤖</i><span>CHATGPT PLUS</span>
+    </div>
+    <div class="box" onclick="unlockLink('https://github.com/Narish8923/CyberUp-Apk-/raw/main/cyberup.apk')">
+        <i>🛡️</i><span>CYBERUP APK</span>
+    </div>
+
+    <div class="section-tag">🔑 EXPRESS VPN (PC)</div>
+    <div class="vpn-box">
+EPOM6NHDERLNPGP2LD3QYYM
+EBFCFDQJFSUIQP6BQJFXK7G
+    </div>
+
+    <div class="section-tag">📩 CONTACT</div>
+    <a href="https://wa.link/rxqkty" class="box" style="grid-column: span 2; border: 2px dashed #25D366;">
+        <i>💬</i><span>FEEDBACK / SUPPORT</span>
+    </a>
+
+</div>
+
+<footer>Powered By <b>Atta Pathan</b> 🏴‍☠️</footer>
+
+<script>
+    let currentLink = "";
+    let shareCounter = 0;
+    const requiredShares = 2;
+    const shareMsg = "Atta Pathan ki A-Z Carding, WhatsApp Unban tricks aur GTA Games download karein: https://whatsapp.com/channel/0029VbBbJoMD38CXtkQTqB0c";
+
+    function unlockLink(link) {
+        currentLink = link;
+        shareCounter = 0;
+        document.getElementById('share-count-text').innerText = "Remaining Shares: 2";
+        document.getElementById('overlay').style.display = 'block';
+        document.getElementById('share-popup').style.display = 'block';
+    }
+
+    function processShare() {
+        window.open(`whatsapp://send?text=${encodeURIComponent(shareMsg)}`);
+        shareCounter++;
+        if (shareCounter >= requiredShares) {
+            document.getElementById('share-count-text').innerText = "✅ UNLOCKED!";
+            setTimeout(() => {
+                document.getElementById('overlay').style.display = 'none';
+                document.getElementById('share-popup').style.display = 'none';
+                window.location.href = currentLink;
+            }, 800);
+        } else {
+            document.getElementById('share-count-text').innerText = `Remaining Shares: ${requiredShares - shareCounter}`;
+        }
+    }
+</script>
+
+</body>
+</html>
